# rust-ultimate-server

./: .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.app  Dockerfile.frontend  Dockerfile.gateway  FILTER_USAGE.md  README.md  builder-rs.sh  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.registry.yml  docker-compose.yml  dockerfile  rustfmt.toml  skills-lock.json
.cargo/: config.toml
cmx-vue-ultimate-starter/: .env  .gitignore  README.md  eslint.config.ts  index.html  package.json  stats.html  tsconfig.app.json  vite.config.ts
cmx-vue-ultimate-starter/scripts/: post-process-ts-types.ts
cmx-vue-ultimate-starter/src/: App.vue  main.ts
cmx-vue-ultimate-starter/src/assets/: index.css  themes-combined.css
cmx-vue-ultimate-starter/src/components/: language-change.vue  local-time.vue  sign-in-button.vue  sign-up-button.vue  toggle-theme.vue  window-controls.vue
cmx-vue-ultimate-starter/src/components/app-sidebar/: index.vue  nav-footer.vue  nav-team.vue  team-switcher.vue  types.ts
cmx-vue-ultimate-starter/src/components/command-menu-panel/: command-to-page.vue
cmx-vue-ultimate-starter/src/components/custom-theme/: content-layout.vue  custom-color.vue  custom-radius.vue  theme-popover.vue
cmx-vue-ultimate-starter/src/components/data-table/: data-table.vue  types.ts  use-generate-vue-table.ts
cmx-vue-ultimate-starter/src/components/global-layout/: basic-header.vue
cmx-vue-ultimate-starter/src/components/inspira-ui/: flickering-grid.vue  (+1 more)
cmx-vue-ultimate-starter/src/composables/: use-auth.ts  use-biz-error.ts  use-sidebar.ts
cmx-vue-ultimate-starter/src/constants/: themes.ts
cmx-vue-ultimate-starter/src/layouts/: default-base.vue  default.vue
cmx-vue-ultimate-starter/src/pages/: index.vue
cmx-vue-ultimate-starter/src/plugins/: index.ts
cmx-vue-ultimate-starter/src/stores/: auth.ts  sidebar.ts
cmx-vue-ultimate-starter/src/types/: auto-import-components.d.ts  auto-import.d.ts  typed-router.d.ts
cmx-vue-ultimate-starter/src/utils/: env.ts
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-macros/: Cargo.toml
crates/libs/lib-rest-core/: Cargo.toml
crates/libs/lib-rpc-core/: Cargo.toml
crates/libs/lib-valkey-core/: Cargo.toml
crates/libs/lib-valkey-core/src/: cache_keys.rs  config.rs  error.rs  extractor.rs  lib.rs  pool.rs  transaction.rs
crates/libs/lib-valkey-core/src/_dev_utils/: mod.rs
crates/libs/lib-valkey-core/src/commands/: hash.rs  json.rs  key.rs  list.rs  mod.rs  pubsub.rs  script.rs  set.rs  sorted_set.rs  stream.rs  string.rs
crates/libs/lib-valkey-core/src/utils/: lock.rs  mod.rs
crates/libs/lib-web/: Cargo.toml
crates/services/pingora-gateway/: Cargo.toml
crates/services/web-server/: Cargo.toml
db-deployer/: Cargo.toml  README.md  db-deployer.example.toml  db-deployer.toml
db-deployer/src/: error.rs  lib.rs  main.rs
db-deployer/src/cli/: deploy.rs  full_deploy.rs  init_keys.rs  mod.rs  status.rs
db-deployer/src/config/: mod.rs  types.rs
db-deployer/src/crypto/: hash.rs  mod.rs  rsa.rs
db-deployer/src/db/: connection.rs  executor.rs  mod.rs  template.rs
db-deployer/src/deploy/: detector.rs  init_mode.rs  lock.rs  mod.rs  upgrade_mode.rs
db-deployer/src/git/: commit.rs  mod.rs
db-deployer/src/project/: compose.rs  docker.rs  git.rs  mod.rs  sync.rs
db-deployer/src/records/: current.rs  history.rs  mod.rs
db-deployer/src/sql/: mod.rs  scanner.rs  validator.rs
docs/: AUTH_DESIGN.md  DEVELOPMENT.md  ERROR_DESIGN.md  FILTER_USAGE.md  PERMISSION.md  TS_EXPORT.md
i18n/: index.ts
i18n/locales/de/: common.json  navigation.json
i18n/locales/en/: common.json  errors.json  navigation.json
i18n/locales/es/: navigation.json
i18n/locales/fr/: navigation.json
i18n/locales/ko/: common.json  index.ts  navigation.json
i18n/locales/ru/: common.json  navigation.json
i18n/locales/zh-CN/: common.json  errors.json  navigation.json
komodo/: compose.env  core.config.toml  mongo.compose.yaml
sql/dev_initial/: 100-dev-seed.sql  100-permission.sql  1000-dev-seed.sql
(+295 files in other folders)
