[workspace.lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils",      # e.g., base64, time.
    "crates/libs/lib-macros",     # e.g., procedural macros for ACS
    "crates/libs/lib-rpc-core",   # e.g., core rpc utils (using rpc-router crate)
    "crates/libs/lib-rest-core",  # e.g., core rest utils for RESTful APIs
    "crates/libs/lib-valkey-core", # e.g., Valkey/Redis client library
    "crates/libs/lib-auth",       # e.g., for pwd, token.
    "crates/libs/lib-core",       # e.g., model, ctx, config.
    "crates/libs/lib-web",        # e.g., logging, common middleware etc

    # -- Application Services
    "crates/services/web-server",
    "crates/services/pingora-gateway",

    # -- Tools
    "crates/tools/gen-key", 
]

# NOTE: Only the crates that are utilized in two or more sub-crates and benefit from global management
#       are handled in workspace.dependencies. Other strategies may also be valid.
[workspace.dependencies]
# -- Serde
serde_with = {version = "3", features = ["time_0_3", "json"] }
# -- Data
modql = { path = "vendor/modql", features = ["with-sea-query"]}
sqlx = { version = "0.8", features = [ "macros", "runtime-tokio", "postgres", "uuid" ] }
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "with-uuid", "with-time" ] }
rpc-router = { path = "vendor/rpc-router" } 
# -- Web
axum = {version = "0.8", features = ["macros"]}
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"
# -- Others
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }
inventory = "0.3"
# -- TypeScript bindings
ts-rs = { version = "10", features = ["serde-compat", "uuid-impl"] }
# -- Database migrations
refinery = { version = "0.8", features = ["tokio-postgres"] }
tokio-postgres = "0.7"
